# gxp

./: .gitignore  CLAUDE.md  README.md  bandit.toml  conftest.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  security.yml
apps/portal/: Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
apps/runtime/: Dockerfile  README.md  index.html  nginx.conf  package.json
docs/: README.md
infra/: README.md
infra/docker/: .env.example  (+1 more)
services/audit-service/: Dockerfile  README.md  pyproject.toml
services/audit-service/app/: config.py  main.py
services/audit-service/app/api/v1/: __init__.py  events.py  reports.py
services/audit-service/app/consumers/: __init__.py  audit_consumer.py
services/audit-service/app/db/migrations/versions/: 001_create_audit_events.py
services/audit-service/app/models/: __init__.py  audit_event.py
services/audit-service/tests/: conftest.py  test_consumer.py  test_reports.py
services/audit-service/worker/: celery_app.py  tasks.py
services/document-service/: Dockerfile  README.md  pyproject.toml
services/document-service/app/: config.py  main.py
services/document-service/app/api/v1/: __init__.py  cross_tenant.py  documents.py  folders.py  search.py
services/document-service/app/db/migrations/: env.py
services/document-service/app/db/migrations/versions/: 001_create_document_tables.py
services/document-service/app/models/: __init__.py  document.py
services/document-service/app/search/: __init__.py  opensearch_client.py
services/document-service/app/services/: permissions.py
services/document-service/app/storage/: __init__.py  minio_client.py
services/document-service/app/worker/: celery_app.py  tasks.py
services/document-service/tests/: test_permissions.py
services/notification-service/: Dockerfile  README.md  pyproject.toml
services/notification-service/app/: config.py  main.py
services/tenant-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/tenant-service/app/: config.py  main.py
services/tenant-service/app/api/v1/: __init__.py  catalog.py  tenants.py
services/tenant-service/app/db/: session.py
services/tenant-service/app/db/migrations/: env.py
services/tenant-service/app/db/migrations/versions/: 001_create_platform_schema.py
services/tenant-service/app/models/: platform.py
services/tenant-service/app/schemas/: tenant.py
services/tenant-service/app/services/: catalog.py  provisioner.py
services/tenant-service/tests/: test_schemas.py
services/tenant-service/worker/: celery_app.py  tasks.py
tests/: README.md
(+168 files in other folders)
