[project]
name = "gxp-tenant-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-keycloak>=4.7",
    "minio>=7.2",
    "opensearch-py[async]>=2.7",
    "redis>=5.2",
    "celery[redis]>=5.4",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "gxp-shared",
]

[tool.uv.sources]
gxp-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "worker"]
